@@ -3,21 +3,25 @@ package com.webapp.model;
 import java.time.LocalDate;
 import java.time.Month;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Objects;
 
 public class Organization {
-    private final Link homePage;
+    private Link homePage;
     private List<Position> positions = new ArrayList<>();
 
+    public Organization() {
+        this.homePage = null;
+        this.positions = new ArrayList<>();
+    }
+
     public Organization(String name, String url, Position... positions) {
-        this(new Link(name, url), Arrays.asList(positions));
+        this(new Link(name, url), List.of(positions));
     }
 
     public Organization(Link homePage, List<Position> positions) {
         this.homePage = homePage;
-        this.positions = positions;
+        this.positions = List.copyOf(positions);
     }
 
     @Override
@@ -43,12 +47,26 @@ public class Organization {
                 '}';
     }
 
-    public static class Position {
-        private final LocalDate startDate;
-        private final LocalDate endDate;
-        private final String title;
-        private final String description;
+    public Iterable<? extends Position> getPositions() {
+        return positions;
+    }
 
+    public Link getHomePage() {
+        return homePage;
+    }
+
+    public static class Position {
+        private LocalDate startDate;
+        private LocalDate endDate;
+        private String title;
+        private String description;
+
+        public Position() {
+            this.startDate = LocalDate.now();
+            this.endDate = LocalDate.now();
+            this.title = "";
+            this.description = "";
+        }
 
         public Position(int startYear, Month startMonth, String title, String description) {
             this(LocalDate.of(startYear, startMonth.getValue(), 1), LocalDate.now(), title, description);
@@ -59,10 +77,13 @@ public class Organization {
         }
 
         public Position(LocalDate startDate, LocalDate endDate, String title, String description) {
-            this.startDate = startDate;
-            this.endDate = endDate;
-            this.title = title;
-            this.description = description;
+            if (endDate.isBefore(startDate)) {
+                throw new IllegalArgumentException("endDate must not be before startDate");
+            }
+            this.startDate = Objects.requireNonNull(startDate, "startDate must not be null");
+            this.endDate = Objects.requireNonNull(endDate, "endDate must not be null");
+            this.title = Objects.requireNonNull(title, "title must not be null");
+            this.description = Objects.requireNonNull(description, "description must not be null");
         }
 
         public LocalDate getStartDate() {
@@ -86,7 +107,9 @@ public class Organization {
             if (o == null || getClass() != o.getClass()) return false;
 
             Position position = (Position) o;
-            return Objects.equals(startDate, position.startDate) && Objects.equals(endDate, position.endDate) && Objects.equals(title, position.title) && Objects.equals(description, position.description);
+            return Objects.equals(startDate, position.startDate) &&
+                    Objects.equals(endDate, position.endDate) &&Objects.equals(title, position.title) &&
+                    Objects.equals(description, position.description);
         }
 
         @Override
